# Project-India-Analysis

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  streamlit_app.py  tsconfig.json
.github/workflows/: sync-analysis.yml
.streamlit/: config.toml
analysis_output/: citations.jsonl  claims.jsonl  documents.jsonl  entities.jsonl  events.jsonl  metrics.jsonl  relationships.jsonl  summary.json  timelines.jsonl  topic_cards.json
analysis_output/topics/: geopolitics.json  ipl-2026.json  pcos-pmos.json  us-iran-war.json
app/: global-error.tsx  globals.css  layout.tsx  page.tsx
app/api/grounded-brief/: route.ts
app/components/: GroundedAsk.tsx
app/evidence/[id]/: page.tsx
project_india_analysis/: __init__.py  cli.py
public/: intelligence-data.json
scripts/: build-intelligence-data.mjs
