[project]
name = "project-india-analysis"
version = "0.1.0"
description = "Analysis layer for Project India gathered evidence"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
app = [
  "pandas>=2.2",
  "streamlit>=1.37",
]

[project.scripts]
project-india-analysis = "project_india_analysis.cli:main"
